--- a/package.json
+++ b/package.json
@@ -31,5 +31,6 @@
     "vite": "^4.4.5",
     "vite-plugin-top-level-await": "^1.3.0",
     "vite-plugin-wasm": "^3.2.2"
-  }
+  },
+  "license": "MIT"
 }
