--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@excalidraw/excalidraw": "^0.17.0",
     "@radix-ui/themes": "^2.0.1",
+    "@types/pako": "^2.0.3",
     "deep-equal": "^2.2.3",
-    "loro-crdt": "^0.4.3",
+    "loro-crdt": "0.7.2-alpha.1",
+    "loro-wasm": "0.7.2-alpha.1",
+    "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
