--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -14,8 +14,8 @@
     "@radix-ui/themes": "^2.0.1",
     "@types/pako": "^2.0.3",
     "deep-equal": "^2.2.3",
-    "loro-crdt": "0.7.2-alpha.3",
-    "loro-wasm": "0.7.2-alpha.3",
+    "loro-crdt": "0.7.2-alpha.4",
+    "loro-wasm": "0.7.2-alpha.4",
     "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
