--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@radix-ui/themes": "^2.0.1",
     "@types/pako": "^2.0.3",
     "deep-equal": "^2.2.3",
-    "loro-crdt": "^1.0.7",
+    "loro-crdt": "=1.0.8-alpha.3",
     "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
